Fix issue with z-index of controls

--- a/src/app/controls/controls.component.css
+++ b/src/app/controls/controls.component.css
@@ -1,3 +1,7 @@
+:host {
+  z-index: 1;
+}
+
 .controls {
   display: flex;
   flex-flow: row;
@@ -10,7 +14,6 @@
   text-align: center;
   background: #fff;
   border-radius: 4px;
-  z-index: 1;
   transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
     0 2px 2px 0 rgba(0, 0, 0, 0.14),
